@@ -1,0 +1,25 @@
+-----BEGIN CERTIFICATE-----
+MIIEPTCCAqWgAwIBAgIRAJJjLhlxZJoT56BMD+4Q5nowDQYJKoZIhvcNAQELBQAw
+ezEeMBwGA1UEChMVbWtjZXJ0IGRldmVsb3BtZW50IENBMSgwJgYDVQQLDB9BUlRV
+UlxhcnRfZUBBcnR1ciAoQXJ0dXIgRXZlcnQpMS8wLQYDVQQDDCZta2NlcnQgQVJU
+VVJcYXJ0X2VAQXJ0dXIgKEFydHVyIEV2ZXJ0KTAeFw0yNDA4MTgwODAzMjBaFw0y
+NjExMTgwOTAzMjBaMFMxJzAlBgNVBAoTHm1rY2VydCBkZXZlbG9wbWVudCBjZXJ0
+aWZpY2F0ZTEoMCYGA1UECwwfQVJUVVJcYXJ0X2VAQXJ0dXIgKEFydHVyIEV2ZXJ0
+KTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKdOZBYJjpqq5Q4tBGqT
+vjDF9XG2xQDQGngaUkeZdJ6tOrSjZcKzscvK4QWtyQUEstn9eP8Q0/Img9v2kl/+
+ji6DQrxs8rTDzgffFzx3TnJBEzgi2JBx0cv49WKuacsRdTVeHlqt6SEHQMbwMuoK
+fMQzguCTB7m9+7HMawuwmH0WIrn2Z3NB/FSFmEq7m/YtdQxfkDVHBEwkr4ZPykiW
+EHG7Ajek2n9poeFAmoXamtRunqI4etpG+Xq0Y7roA2SkeCiiMAX4+6/HOcWbutx+
+1zVPusSMlSdjLjFMkr2sfz7klBIPAztZV8pQGIMCGJ6cX3Kjm4trmxg2W2EpVkH8
+zWMCAwEAAaNkMGIwDgYDVR0PAQH/BAQDAgWgMBMGA1UdJQQMMAoGCCsGAQUFBwMB
+MB8GA1UdIwQYMBaAFLxE72danSCA3wSBJ0NRUv9cEqO+MBoGA1UdEQQTMBGCCWxv
+Y2FsaG9zdIcEfwAAATANBgkqhkiG9w0BAQsFAAOCAYEA0LKJ2yXVuXkmYcjjg/KS
+Ljy1GY9QXWF1HoRz2uh/Ep1lsQ86GKRzEZjKHK9Q363ZZB6zPsduAptdNGRPFrlQ
+J2wYGpEZ8OZIDDFmIBG26/xW+bx9uEXa5bZHSwLJXw7EdqnfP+F8dqYKFIojFdxc
+It20oGxiMdUQFUqj53d0gZtK42T6qyN/BPKub/utzWn/v4OOJ89u7MkT8po8hlV2
+4E5sz9ptk7vreolSd7/KHaoJqdNJIH5AGo2wWBb4bXT25hGOq/5EE57AX9EVbSvp
+EmogNOmFK4P035Vk8H4lWpqSYCaWo7WZor4kb+oRgd+6U3Nv3+4J5MUMDlTQa+gk
+ODnJPgj2UjVrjgLedGNUnXpQg4DU5k0dXDkPrx1V4LRirW2epCAEbuMADG/QMZSi
+FQwzCGNq8qDXUxd7nt99o6eORUPIZEgYQUGU4bGiCT0UIwSKC6UibNPP5c3czjM3
++Uuu60hNIDDeQQHsSMenDgMaZszGNCSU+/Sf+6OS7Rye
+-----END CERTIFICATE-----
