@@ -13,4 +13,6 @@ Found its best practice for websites to have login error messages that dont isol
 - NEW! Favicon updated
 - FIX! Fixed "Failed to load resource: the server responded with a status of 404 (Not Found) :8080/favicon.ico:1 "
 ---------------------------------------
-
+----------------v1.4-------------------
+- NEW! Upgraded HTTP to HTTPS: All communications are now securely handled over HTTPS. This change improves security by encrypting data in transit and ensuring secure connections.
+- FIX! style.css changes
